--- a/wwwroot/css/create.css
+++ b/wwwroot/css/create.css
@@ -54,11 +54,11 @@ body {
 }
 
 
-.category-box.selected {
+/* .category-box.selected {
   background-color: #afe3fc;
   border: 2px solid #0080ff;
   color: black;
-}
+} */
 
 .detailbox {
   margin-bottom: 20px;
