--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -127,6 +127,7 @@ body {
   
   .inputDescription {
       margin-bottom: 10px;
+      margin-left: 100px;
       display: grid;
       width: 100%;
       gap: 10px; 
