--- a/Views/Shared/_NotificationOwner.cshtml
+++ b/Views/Shared/_NotificationOwner.cshtml
@@ -15,7 +15,7 @@
 
 @foreach (Notification noti in Model.Data)
 
-{       string userId = noti.Id;
+{       string userId = noti.FromUserId;
         string imageProfilePath = ImageService.GetUserImageFileExtension(userId);
         var type = noti.Type;
 
@@ -27,11 +27,11 @@
                 <div class="noti-info">
                     @if (type == TypeStatus.Joined)
                         {
-                            <h1>@noti.User.Name has been joined @noti.Event.Title</h1>
+                            <h1>@noti.User.Name has joined your Event.</h1>
                         }
                         else if (type == TypeStatus.Cancelled)
                         {
-                            <h1>@noti.User.Name has been Cancelled</h1>
+                            <h1>@noti.User.Name has left your Event.</h1>
                         }
                     <hr/>
                     <p>Event : @noti.Event.Title</p>
