--- a/wwwroot/css/create.css
+++ b/wwwroot/css/create.css
@@ -54,9 +54,9 @@ body {
 }
 
 
-.category-box.selected {
-  background-color: #afe3fc;
-  border: 2px solid #0080ff;
+.category-box.selected[data-color] {
+  background-color: attr(data-color);
+  border: 2px solid;
   color: black;
 }
 
