--- a/Views/Event/Details.cshtml
+++ b/Views/Event/Details.cshtml
@@ -46,7 +46,7 @@
     </div>
     <div class="evt-body">
         <p class="evt-description">@Model.Description</p>
-        <span class="evt-enddate">Close Date<br>@Model.EndDate.ToString("dd/MM/yyyy")</span>
+        <span class="evt-enddate">Close Date<br>@Model.EndDate.ToLocalTime().ToString("dd/MM/yyyy")</span>
         <span class="evt-enrollsize @(Model.IsOpen?(currentEnroll<Model.EnrollSize?"vacant":"full"):"close")">
             @enrollMsg <i class="fa-solid fa-user-group"></i>
         </span>
