--- a/Views/Shared/_EventBannerPartial.cshtml
+++ b/Views/Shared/_EventBannerPartial.cshtml
@@ -51,24 +51,24 @@
                 <span class="evt-enddate">Close Date<br>@evt.EndDate.ToLocalTime().ToString("dd/MM/yyyy")</span>
             </div>
         </a>
-        @if (!selfOwned && evt.IsOpen) {
-                @if (canJoin) {
-                    <form method="post">
-                        <button class="evt-join active @(currentlyJoin?"leave":"join")" asp-controller="Event" asp-action="Subscribe" asp-route-id="@evt.Id">
-                            @if (currentlyJoin) {
-                                <text>ออก</text>
-                            }
-                            else {
-                                <text>เข้าร่วม</text>
-                            }
-                        </button>
-                    </form>
-                } 
-                else {
-                    <button class="evt-join">
-                        เข้าร่วม
+        @if (!selfOwned) {
+            @if (canJoin) {
+                <form method="post">
+                    <button class="evt-join active @(currentlyJoin?"leave":"join")" asp-controller="Event" asp-action="Subscribe" asp-route-id="@evt.Id">
+                        @if (currentlyJoin) {
+                            <text>ออก</text>
+                        }
+                        else {
+                            <text>เข้าร่วม</text>
+                        }
                     </button>
-                }
+                </form>
+            } 
+            else {
+                <button class="evt-join">
+                    เข้าร่วม
+                </button>
+            }
             
         }
     </div>
