--- a/Views/Event/Edit.cshtml
+++ b/Views/Event/Edit.cshtml
@@ -7,20 +7,19 @@
 }
 
 <div class="EditPost">
-    <div class="header"><h2>EditPost Post</h2></div>
+    <div class="header"><h2>EditPost</h2></div>
     <hr><br>
-    <form class="editForm" method="post" action='@Url.Action("Edit", "Event", new { id = Model.Id })'>
+    <form class="editForm" method="post" action='@Url.Action("EditEvent", "Event", new { id = Model.Id })'>
         <div class="header"><h2>Property Category</h2></div>
         <div class="PropertyCategory">
             <div class="category-boxes">
-                <div class="category-box" data-category="Meeting" ><i class="fa fa-heart-o" aria-hidden="true"></i><br>Meeting</div>
-                <div class="category-box" data-category="exercise"><i class="fa-solid fa-dumbbell" aria-hidden="true"></i><br>Exercise</div>
-                <div class="category-box" data-category="Exercise"><i class="fa-solid fa-utensils" aria-hidden="true"></i><br>Eating</div>
-                <div class="category-box" data-category="Working"><i class="fa-solid fa-briefcase" aria-hidden="true"></i><br>Working</div>
-                <div class="category-box" data-category="Concert"><i class="fa-solid fa-guitar" aria-hidden="true"></i><br>Concert</div>
-                <div class="category-box" data-category="Karaoke"><i class="fa-solid fa-music" aria-hidden="true"></i><br>Karaoke</div>
-                <div class="category-box" data-category="Party"><i class="fa-solid fa-champagne-glasses" aria-hidden="true"></i><br>Party</div>
-                <div class="category-box" data-category="Tabletop"><i class="fa-solid fa-chess" aria-hidden="true"></i><br>Tabletop</div>
+                @foreach (var category in HaBuddies.Constants.Category.DataDict)
+                    {
+                        <div class="category-box" data-category="@category.Key">
+                            @Html.Raw(category.Value.IconHtml)
+                            <br>@category.Key
+                        </div>
+                    }
             </div>
             <input type="hidden" class="category" name="Category" value="@Model.Category" required>
         </div>
