fix: typo and http get bug

--- a/Views/Event/Create.cshtml
+++ b/Views/Event/Create.cshtml
@@ -40,7 +40,7 @@
                     <input type="number" class="enrollSize" id="EnrollSize" name="EnrollSize" required>
                 </div>
                 <div class="inputdate">
-                    <label for="EndDate">Closedate</label>
+                    <label for="EndDate">Close Date</label>
                     <input type="date" class="endDate" id="EndDate" name="EndDate" required>
                 </div>
             </div>
