--- a/Views/Event/Details.cshtml
+++ b/Views/Event/Details.cshtml
@@ -76,7 +76,7 @@
                     ปิดรับ
                 </button>
             </form>
-            <form method="post">
+            <form method="get">
                 <button class="evt-edit" asp-controller="Event" asp-action="Edit" asp-route-id="@Model.Id")>
                     แก้ไข
                 </button>
