fix(date): date

--- a/Views/Event/Create.cshtml
+++ b/Views/Event/Create.cshtml
@@ -37,7 +37,7 @@
                 </div>
                 <div class="inputPeople">
                     <label for="EnrollSize">People</label>
-                    <input type="number" class="enrollSize" id="EnrollSize" name="EnrollSize" required>
+                    <input type="number" class="enrollSize" id="EnrollSize" name="EnrollSize" min="0" required>
                 </div>
                 <div class="inputdate">
                     <label for="EndDate">Close Date</label>
@@ -54,11 +54,11 @@
             <div class="requirement">
                 <div class="inputRequirement">
                     <label for="MinAgeRequirement">Min Age</label>
-                    <input type="number" class="minAge" id="MinAgeRequirement" name="MinAgeRequirement" value= "" >
+                    <input type="number" class="minAge" id="MinAgeRequirement" name="MinAgeRequirement" value= "" min="0" >
                 </div>
                 <div class="inputRequirement">
                     <label for="MaxAgeRequirement">Max Age</label>
-                    <input type="number" class="maxAge" id="MaxAgeRequirement" name="MaxAgeRequirement" value="" >
+                    <input type="number" class="maxAge" id="MaxAgeRequirement" name="MaxAgeRequirement" value="" min="0" >
                 </div>
                 <div class="inputRequirement">
                     <label for="GenderRequirement">Gender</label>
