--- a/Views/Event/Create.cshtml
+++ b/Views/Event/Create.cshtml
@@ -21,10 +21,11 @@
                     @foreach (var category in Category.DataDict)
                     {
                         string categoryName = category.Key;
-                        <div class="category-box" data-category="@categoryName" color="@Category.GetColorHex(categoryName)">
+                        <input type="radio" name="Category" id="@categoryName" class="category-radio" value="@categoryName" required />
+                        <label for="@categoryName" class="category-box" color="@Category.GetColorHex(categoryName)">
                             @Html.Raw(category.Value.IconHtml)
                             <br>@categoryName
-                        </div>
+                        </label>
                     }
                 </div>
                 <input type="hidden" class="category" name="Category" required>
@@ -77,18 +78,17 @@
 
         </form>
         <script>
-            document.querySelectorAll('.category-box').forEach(function(box) {
-                box.addEventListener('click', function() {
+            document.getElementsByName('Category').forEach((radio) => {
+                var selector = 'label[for=' + radio.id + ']';
+                var label = document.querySelector(selector);
+                label.addEventListener('click', function(){
                     document.querySelectorAll('.category-box').forEach(function(box) {
                         box.style.backgroundColor = null;
                     });
                     const color = this.getAttribute('color');
                     this.style.backgroundColor = color;
-                    document.querySelector('.category').value = this.getAttribute('data-category');
                 });
-            });  
-
-
+            })
 
             var checkList = document.getElementById('GenderRequirement');
             checkList.getElementsByClassName('anchor')[0].onclick = function(evt) {
