--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -59,7 +59,13 @@ body {
     border: 2px solid #0080ff;
     color: black;
   }
-  
+
+  .category-radio {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+  }
+
   .detailbox {
     margin-bottom: 20px;
     margin-left: 100px;
