--- a/Views/Event/Create.cshtml
+++ b/Views/Event/Create.cshtml
@@ -21,13 +21,13 @@
                     @foreach (var category in Category.DataDict)
                     {
                         string categoryName = category.Key;
-                        <div class="category-box" data-category="@categoryName" color="@Category.GetColorHex(categoryName)">
+                        <input type="radio" name="Category" id="@categoryName" class="category-radio" value="@categoryName" required />
+                        <label for="@categoryName" class="category-box" color="@Category.GetColorHex(categoryName)">
                             @Html.Raw(category.Value.IconHtml)
                             <br>@categoryName
-                        </div>
+                        </label>
                     }
                 </div>
-                <input type="hidden" class="category" name="Category" required>
             </div>
             <div class="header"><h2>Detail</h2></div>
             <div class="detailbox">
@@ -63,32 +63,30 @@
                 <div class="inputRequirement">
                     <label for="GenderRequirement">Gender</label>
                     <div id="GenderRequirement" class="dropdown-check-list" name="GenderRequirement" tabindex="100">
-                    <span class="anchor">Select Gender</span>
-                    <ul class="items">
-                        <li><input type="checkbox" id="maleCheckbox" name="GenderRequirement" value="Male"/> Male</li>
-                        <li><input type="checkbox" id="femaleCheckbox" name="GenderRequirement" value="Female"/> Female</li>
-                        <li><input type="checkbox" id="otherCheckbox" name="GenderRequirement" value="Other"/> Other</li>
-
-                    </ul>
-                </div> 
+                        <span class="anchor">Select Gender</span>
+                        <ul class="items">
+                            <li><input type="checkbox" id="maleCheckbox" name="GenderRequirement" value="Male"/> Male</li>
+                            <li><input type="checkbox" id="femaleCheckbox" name="GenderRequirement" value="Female"/> Female</li>
+                            <li><input type="checkbox" id="otherCheckbox" name="GenderRequirement" value="Other"/> Other</li>
+                        </ul>
+                    </div> 
                 </div>
             </div>
             <input type="submit" value="Create" >
 
         </form>
         <script>
-            document.querySelectorAll('.category-box').forEach(function(box) {
-                box.addEventListener('click', function() {
+            document.getElementsByName('Category').forEach((radio) => {
+                var selector = 'label[for="' + radio.id + '"]';
+                var label = document.querySelector(selector);
+                label.addEventListener('click', function(){
                     document.querySelectorAll('.category-box').forEach(function(box) {
                         box.style.backgroundColor = null;
                     });
                     const color = this.getAttribute('color');
                     this.style.backgroundColor = color;
-                    document.querySelector('.category').value = this.getAttribute('data-category');
                 });
-            });  
-
-
+            });
 
             var checkList = document.getElementById('GenderRequirement');
             checkList.getElementsByClassName('anchor')[0].onclick = function(evt) {
