feat: edit profile style

--- a/Views/User/MyProfile.cshtml
+++ b/Views/User/MyProfile.cshtml
@@ -83,7 +83,7 @@
         <div class="editImage" style="display: none;" >
             <form method="post" enctype="multipart/form-data" asp-controller="Image" asp-action="UploadImage">
                     
-                    <div class="ChangeProfile">ChangeProfile</div><br>
+                    <div class="ChangeProfile">Change Profile Image</div><br>
                     <input type="file" name="file" class="formImage" accept="image/*" required/>
                 
                 <div>
