--- a/Views/Shared/_NotificationOwner.cshtml
+++ b/Views/Shared/_NotificationOwner.cshtml
@@ -15,7 +15,7 @@
 
 @foreach (Notification noti in Model.Data)
 
-{       string userId = noti.FromUserId;
+{       string userId = noti.FromUserId!;
         string imageProfilePath = ImageService.GetUserImageFileExtension(userId);
         var type = noti.Type;
 
