--- a/wwwroot/css/myprofile.css
+++ b/wwwroot/css/myprofile.css
@@ -13,7 +13,6 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-
 .profile-header {
     display: flex;
     align-items: center;
@@ -32,17 +31,8 @@ body {
     margin-right: 20px;
 }
 
-.profile-header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-}
-
-.editbutton{
-    display: flex;
-    margin-right: 30px;
-    height: 20px;
-    width: 20px;
+.profile-name {
+    margin-top: 25px;
 }
 
 .profile-info {
@@ -59,6 +49,23 @@ label {
     width: 100px; 
     margin-bottom: 10px;
     margin-top: 10px; 
+}
+
+.editProfileButton, .editImageButton {
+    color: var(--dark-grey);
+    background-color: #fff;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 0.5rem 0.7rem;
+    margin-left: 10px;
+    border: 2px solid var(--border-color);
+    border-radius: 25px;
+}
+
+.editProfileButton:hover, .editImageButton:hover {
+    color: var(--main-color);
+    border-color: var(--hover-border-color);
+    transition: 500ms;
 }
 
 
@@ -246,7 +253,7 @@ input.formImage {
 
 input[type="submit"] {
     display: block;
-    width: 10%;
+    width: 15%;
     padding: 10px;
     font-size: 16px;
     background-color: #007bff;
