--- a/Views/Event/Details.cshtml
+++ b/Views/Event/Details.cshtml
@@ -38,10 +38,14 @@
         </div>
         <h1 class="evt-title">@Model.Title</h1>
         <div class="owner">
-            <div class="owner-picture" onclick="ClickProfile('@Model.OwnerId')">
+        <a draggable="false" asp-controller="User" asp-action="Bio" asp-route-id="@Model.OwnerId">
+            <div class="owner-picture">
                 <img alt="Owner picture" src="~/@imageOwnerPath" draggable="false">
             </div>
-            <span class="owner-name" onclick="ClickProfile('@Model.OwnerId')">@OwnerName</span>
+        </a>
+        <a draggable="false" asp-controller="User" asp-action="Bio" asp-route-id="@Model.OwnerId">
+            <span class="owner-name">@OwnerName</span>
+        </a>    
         </div>
     </div>
     <div class="evt-body">
@@ -101,12 +105,14 @@
         <h2>Member</h2>
         @foreach (UserNoPassword member in Model.Subscribers) {
             string imageMemberPath = ImageService.GetUserImageFileExtension(member.Id);
-            <div type="button" class="member" onclick="ClickProfile('@member.Id')">
-                <div class="member-picture">
-                    <img alt="Member picture" src="~/@imageMemberPath" draggable="false">
+            <a draggable="false" asp-controller="User" asp-action="Bio" asp-route-id="@member.Id">
+                <div type="button" class="member">
+                    <div class="member-picture">
+                        <img alt="Member picture" src="~/@imageMemberPath" draggable="false">
+                    </div>
+                    <span class="member-name">@member.Name @member.Surname</span>
                 </div>
-                <span class="member-name">@member.Name @member.Surname</span>
-            </div>
+            </a>
         }
     </div>
 
@@ -114,20 +120,14 @@
         <h2>Queue</h2>
         @foreach (UserNoPassword qUser in Model.Queue) {
             string imageQueueUserPath = ImageService.GetUserImageFileExtension(qUser.Id);
-            <div type="button" class="q-user" onclick="ClickProfile('@qUser.Id')">
-                <div class="q-user-picture">
-                    <img alt="q-user picture" src="~/@imageQueueUserPath" draggable="false">
+            <a draggable="false" asp-controller="User" asp-action="Bio" asp-route-id="@qUser.Id">
+                <div type="button" class="q-user">
+                    <div class="q-user-picture">
+                        <img alt="q-user picture" src="~/@imageQueueUserPath" draggable="false">
+                    </div>
+                    <span class="q-user-name">@qUser.Name @qUser.Surname</span>
                 </div>
-                <span class="q-user-name">@qUser.Name @qUser.Surname</span>
-            </div>
+            </a>
         }
     </div>
 </div>
-
-@section Scripts {
-    <script>
-        function ClickProfile(id) {
-            alert("Profile of " + id);
-        }
-    </script>
-}
