--- a/wwwroot/css/detail.css
+++ b/wwwroot/css/detail.css
@@ -1,317 +1,366 @@
 @import "./theme.css";
 
 .evt-detail {
-    display: block;
-    margin-left: 2rem;
-    margin-right: 2.5rem;
-    margin-top: 7rem;
-    margin-bottom: 4rem;
-    padding: 1.5rem 2rem;
-    padding-bottom: 4rem;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 10px 0px;
-    --xmarginSmall: 1rem;
-    --button-width: 9rem;
-    --button-height: 3.3rem;
+  display: block;
+  margin-left: 2rem;
+  margin-right: 2.5rem;
+  margin-top: 7rem;
+  margin-bottom: 4rem;
+  padding: 1.5rem 2rem;
+  padding-bottom: 4rem;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 10px 0px;
+  --xmarginSmall: 1rem;
+  --button-width: 9rem;
+  --button-height: 3.3rem;
+}
+
+.owner a {
+  text-decoration: none;
 }
 
 .evt-detail .evt-heading {
-    height: auto;
-    padding-bottom: 0.6rem;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: max-content max-content max-content;
-    column-gap: 1rem;
-    max-width: 100%;
-    border-bottom: 2px solid var(--light-grey);
+  height: auto;
+  padding-bottom: 0.6rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: max-content max-content max-content;
+  column-gap: 1rem;
+  max-width: 100%;
+  border-bottom: 2px solid var(--light-grey);
 }
 
-.category, .evt-enrollsize, .evt-join, .evt-toggle, .evt-edit, .evt-delete{
-    border-radius: 25px;
-    padding: 0.8rem 1rem;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: center;
-    color: white;
+.category,
+.evt-enrollsize,
+.evt-join,
+.evt-toggle,
+.evt-edit,
+.evt-delete {
+  border-radius: 25px;
+  padding: 0.8rem 1rem;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  color: white;
 }
 
 .evt-heading * {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .evt-heading *:not(i) {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .evt-heading i {
-    margin-right: 0.2rem;
+  margin-right: 0.2rem;
 }
 
 .evt-heading .category {
-    grid-row: 1 / 2;
-    justify-self: start;
+  grid-row: 1 / 2;
+  justify-self: start;
 }
 
 .evt-heading .evt-title {
-    grid-row: 2 / 3;
-    margin-top: 0.8rem;
-    font-size: 26px;
-    color: black;
+  grid-row: 2 / 3;
+  margin-top: 0.8rem;
+  font-size: 26px;
+  color: black;
 }
 
 .evt-heading .owner {
-    grid-row: 3 / 4;
-    margin: 0 0.6rem;
-    margin-bottom: 0.5rem;
+  grid-row: 3 / 4;
+  margin: 0 0.6rem;
+  margin-bottom: 0.5rem;
 }
 
 .evt-heading .owner-name {
-    margin-left: 0.2rem;
-    color: black;
-    cursor: pointer;
-}
-  
-.evt-heading .owner-picture {
-    position: relative;
-    width: 2.1rem;
-    height: 2.1rem;
-    top: 0.72rem;
-    display: inline-block;
-    border-radius: 50%;
-    background-color: var(--border-color);
-    overflow: hidden;
-    cursor: pointer;
+  margin-left: 0.2rem;
+  color: black;
+  cursor: pointer;
 }
 
-.evt-heading .owner-picture img{
-    position: absolute;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+.evt-heading .owner-picture {
+  position: relative;
+  width: 2.1rem;
+  height: 2.1rem;
+  top: 0.72rem;
+  display: inline-block;
+  border-radius: 50%;
+  background-color: var(--border-color);
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.evt-heading .owner-picture img {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .evt-detail .evt-body {
-    padding: 1rem 0;
-    display: grid;
-    grid-template-columns: 1fr max-content;
-    grid-template-rows: 1fr max-content max-content max-content max-content;
-    gap: 1rem 2rem;
-    max-width: 100%;
+  padding: 1rem 0;
+  display: grid;
+  grid-template-columns: 1fr max-content;
+  grid-template-rows: 1fr max-content max-content max-content max-content;
+  gap: 1rem 2rem;
+  max-width: 100%;
 }
 
-.evt-body .evt-description, .evt-enddate {
-    color: black;
-    border: 2px solid var(--light-grey);
-    border-radius: 15px;
+.evt-body .evt-description,
+.evt-enddate {
+  color: black;
+  border: 2px solid var(--light-grey);
+  border-radius: 15px;
 }
 
 .evt-body .evt-description {
-    grid-area: 1 / 1 / 6 / 2;
-    padding: 1rem 1.5rem;
-    min-height: 4rem;
+  grid-area: 1 / 1 / 6 / 2;
+  padding: 1rem 1.5rem;
+  min-height: 4rem;
 }
 
 .evt-body .evt-enddate {
-    grid-area: 1 / 2 / 2 / 3;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: center;
-    padding: 1rem 0;
-    min-width: var(--button-width);
-    align-self: first baseline;
+  grid-area: 1 / 2 / 2 / 3;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  padding: 1rem 0;
+  min-width: var(--button-width);
+  align-self: first baseline;
 }
 
 .evt-body .evt-enrollsize {
-    grid-area: 2 / 2 / 3 / 3;
-    word-break: break-all;
-    max-width: 9rem;
-    height: max-content;
-    align-self: last baseline;
+  grid-area: 2 / 2 / 3 / 3;
+  word-break: break-all;
+  max-width: 9rem;
+  height: max-content;
+  align-self: last baseline;
 }
 
 .evt-body .evt-enrollsize.vacant {
-    background-color: var(--green-color);
+  background-color: var(--green-color);
 }
 
 .evt-body .evt-enrollsize.full {
-    background-color: var(--red-color);
+  background-color: var(--red-color);
 }
 
 .evt-body .evt-enrollsize.close {
-    background-color: var(--normal-grey);
+  background-color: var(--normal-grey);
 }
 
 .evt-body .evt-enrollsize i {
-    margin-left: 0.2rem;
+  margin-left: 0.2rem;
 }
 
 .evt-body .empty {
-    display:none;
+  display: none;
 }
 
 .evt-body .evt-join {
-    grid-area: 3 / 2 / 6 / 3;
-    height: max-content;
-    width: 100%;
-    align-self: last baseline;
-    border: none;
+  grid-area: 3 / 2 / 6 / 3;
+  height: max-content;
+  width: 100%;
+  align-self: last baseline;
+  border: none;
 }
 
 .evt-body .evt-join.active.join {
-    background-color: var(--main-color);
-    cursor: pointer;
+  background-color: var(--main-color);
+  cursor: pointer;
 }
 
 .evt-body .evt-join.active.join:hover {
-    background-color: var(--hover-dark-color);
-    transition: 500ms;
+  background-color: var(--hover-dark-color);
+  transition: 500ms;
 }
 
 .evt-body .evt-join.active.leave {
-    background-color: var(--red-color);
-    cursor: pointer;
+  background-color: var(--red-color);
+  cursor: pointer;
 }
 
 .evt-body .evt-join.active.leave:hover {
-    background-color: var(--dark-red);
-    transition: 500ms;
+  background-color: var(--dark-red);
+  transition: 500ms;
 }
 
 .evt-body .evt-toggle {
-    grid-area: 3 / 2 / 4 / 3;
-    height: max-content;
-    align-self: last baseline;
-    width: 100%;
-    border: none;
-    background-color: var(--main-color);
-    cursor: pointer;
+  grid-area: 3 / 2 / 4 / 3;
+  height: max-content;
+  align-self: last baseline;
+  width: 100%;
+  border: none;
+  background-color: var(--main-color);
+  cursor: pointer;
 }
 
 .evt-body .evt-toggle:hover {
-    background-color: var(--hover-dark-color);
-    transition: 500ms;
+  background-color: var(--hover-dark-color);
+  transition: 500ms;
 }
 
 .evt-body .evt-edit {
-    grid-area: 4 / 2 / 5 / 3;
-    height: max-content;
-    align-self: last baseline;
-    width: 100%;
-    border: none;
-    background-color: var(--orange-color);
-    cursor: pointer;
+  grid-area: 4 / 2 / 5 / 3;
+  height: max-content;
+  align-self: last baseline;
+  width: 100%;
+  border: none;
+  background-color: var(--orange-color);
+  cursor: pointer;
 }
 
 .evt-body .evt-edit:hover {
-    background-color: var(--dark-orange);
-    transition: 500ms;
+  background-color: var(--dark-orange);
+  transition: 500ms;
 }
 
 .evt-body .evt-delete {
-    grid-area: 5 / 2 / 6 / 3;
-    height: max-content;
-    align-self: last baseline;
-    width: 100%;
-    border: none;
-    background-color: var(--red-color);
-    cursor: pointer;
+  grid-area: 5 / 2 / 6 / 3;
+  height: max-content;
+  align-self: last baseline;
+  width: 100%;
+  border: none;
+  background-color: var(--red-color);
+  cursor: pointer;
 }
 
 .evt-body .evt-delete:hover {
-    background-color: var(--dark-red);
-    transition: 500ms;
+  background-color: var(--dark-red);
+  transition: 500ms;
 }
 
 .requirement {
-    display: inline-block;
-    padding: 0.5rem 1rem;
-    font-size: 18px;
-    font-weight: 500;
-    background-color: white;
-    color: var(--dark-grey);
-    border-radius: 30px;
-    border: 2px solid var(--border-color);
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  font-size: 18px;
+  font-weight: 500;
+  background-color: white;
+  color: var(--dark-grey);
+  border-radius: 30px;
+  border: 2px solid var(--border-color);
 }
 
-.requirement .req-age, .requirement .req-gender {
-    color: white;
-    display: inline-block;
-    margin-left: 0.5rem;
-    padding: 0.5rem 1rem;
-    background-color: var(--main-color);
-    border-radius: 25px;
-    border: 2px solid var(--dark-blue);
+.requirement .req-age,
+.requirement .req-gender {
+  color: white;
+  display: inline-block;
+  margin-left: 0.5rem;
+  padding: 0.5rem 1rem;
+  background-color: var(--main-color);
+  border-radius: 25px;
+  border: 2px solid var(--dark-blue);
 }
 
-.evt-member h2, .evt-q-user h2 {
-    padding: 0.5rem 0;
-    margin: 1.5rem 0;
-    border-bottom: 2px solid var(--light-grey);
+.evt-member h2,
+.evt-q-user h2 {
+  padding: 0.5rem 0;
+  margin: 1.5rem 0;
+  border-bottom: 2px solid var(--light-grey);
 }
 
-.evt-member .member, .evt-q-user .q-user {
-    position: relative;
-    margin-bottom: 1rem;
-    margin-right: 1rem;
-    display: inline-block;
-    font-size: 18px;
-    font-weight: 500;
-    padding: 0.5rem 0.7rem;
-    border-radius: 25px;
-    background-color: var(--main-color);
-    border: none;
-    cursor: pointer;
+.evt-member .member,
+.evt-q-user .q-user {
+  position: relative;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 0.5rem 0.7rem;
+  border-radius: 25px;
+  background-color: var(--main-color);
+  border: none;
+  cursor: pointer;
 }
 
-.evt-member .member-name, .evt-q-user .q-user-name {
-    margin-left: 2rem;
-    margin-right: 0.5rem;
-    color: white;
-}
-  
-.evt-member .member-picture, .evt-q-user .q-user-picture {
-    position: absolute;
-    width: 2.1rem;
-    height: 2.1rem;
-    left: 0.15rem;
-    top: 0.15rem;
-    display: inline-block;
-    border-radius: 50%;
-    background-color: var(--border-color);
-    overflow: hidden;
+.evt-member .member-name,
+.evt-q-user .q-user-name {
+  margin-left: 2rem;
+  margin-right: 0.5rem;
+  color: white;
 }
 
-.evt-member .member-picture img, .evt-q-user .q-user-picture img {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+.evt-member .member-picture,
+.evt-q-user .q-user-picture {
+  position: absolute;
+  width: 2.1rem;
+  height: 2.1rem;
+  left: 0.15rem;
+  top: 0.15rem;
+  display: inline-block;
+  border-radius: 50%;
+  background-color: var(--border-color);
+  overflow: hidden;
 }
 
-.evt-member .member:hover, .evt-q-user .q-user:hover {
-    background-color: var(--hover-dark-color);
-    transition: 500ms;
+.evt-member .member-picture img,
+.evt-q-user .q-user-picture img {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.evt-member .member:hover,
+.evt-q-user .q-user:hover {
+  background-color: var(--hover-dark-color);
+  transition: 500ms;
 }
 
 @media (max-width: 992px) {
-    .evt-detail {margin-left: 2rem; margin-right: 2rem;}
-    .evt-detail .evt-description { grid-area: 1 / 1 / 2 / 3; }
-    .evt-body .evt-enddate { grid-area: 2 / 1 / 3 / 2; }
-    .evt-body .evt-enrollsize { grid-area: 3 / 1 / 4 / 2; }
-    .evt-body .evt-join { grid-area: 2 / 2 / 3 / 3; }
-    .evt-body .evt-toggle { grid-area: 2 / 2 / 3 / 3; }
-    .evt-body .evt-edit { grid-area: 3 / 2 / 4 / 3; }
-    .evt-body .empty { display: block; }
-    .evt-body .evt-delete { grid-area: 4 / 2 / 5 / 3; }
+  .evt-detail {
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+  .evt-detail .evt-description {
+    grid-area: 1 / 1 / 2 / 3;
+  }
+  .evt-body .evt-enddate {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .evt-body .evt-enrollsize {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  .evt-body .evt-join {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+  .evt-body .evt-toggle {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+  .evt-body .evt-edit {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+  .evt-body .empty {
+    display: block;
+  }
+  .evt-body .evt-delete {
+    grid-area: 4 / 2 / 5 / 3;
+  }
 
-    .evt-body .evt-enddate { 
-        justify-self: left;
-        padding: 0.8rem 1rem;
-        width: auto;
-    }
-    .evt-body .evt-enddate br { content: "";}
-    .evt-body .evt-enddate br:after { content: ": ";}
-    .evt-body .evt-enrollsize { justify-self: left; max-width: 12rem;}
-    .requirement { padding-top: 1rem;}
-    .requirement .req-age, .requirement .req-gender { display: block; margin: 0.6rem 0;}
+  .evt-body .evt-enddate {
+    justify-self: left;
+    padding: 0.8rem 1rem;
+    width: auto;
+  }
+  .evt-body .evt-enddate br {
+    content: "";
+  }
+  .evt-body .evt-enddate br:after {
+    content: ": ";
+  }
+  .evt-body .evt-enrollsize {
+    justify-self: left;
+    max-width: 12rem;
+  }
+  .requirement {
+    padding-top: 1rem;
+  }
+  .requirement .req-age,
+  .requirement .req-gender {
+    display: block;
+    margin: 0.6rem 0;
+  }
 }
