fix(profile): remove br my profile from p'chompu recommend

--- a/Views/User/MyProfile.cshtml
+++ b/Views/User/MyProfile.cshtml
@@ -30,22 +30,22 @@
         </div>
         <hr>
         <div class="profile-info" id="profileInfo">
-            <label>Name</label><br>
+            <label>Name</label>
             <span class="name">@Model.Name @Model.Surname</span><br>
 
-            <label>Gender</label><br>
+            <label>Gender</label>
             <span class="gender">@Model.Gender</span><br>
 
-            <label>Birthdate</label><br>
+            <label>Birthdate</label>
             <span class="Birthdate">@Model.BirthDate.ToLocalTime().ToString("yyyy-MM-dd")</span><br>
 
-            <label>Age</label><br>
+            <label>Age</label>
             <span class="age">@Model.Age</span><br>
 
-            <label>contact</label><br>
+            <label>contact</label>
             <span class="contact">@Model.Email</span><br>
 
-            <label>About Me</label><br>
+            <label>About Me</label>
             <span class="about">@Model.Bio</span>
         </div>
 
