--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -200,6 +200,7 @@ label #close-nav {
 
   header .logo {
     margin-left: 4.5rem;
+    font-size: 24px;
   }
   header ul {
     margin-right: 1rem;
