--- a/wwwroot/css/banner.css
+++ b/wwwroot/css/banner.css
@@ -225,7 +225,7 @@
 }
 
 @media (max-width: 992px) {
-    .banner {margin-left: 2rem; margin-right: 2rem;}
+    .banner {margin-left: 1rem; margin-right: 1rem;}
     .banner .evt-heading { margin: 0 var(--xmarginSmall); padding-top: 1rem;}
     .banner .evt-body { margin: 0 var(--xmarginSmall); column-gap: 1rem; }
     .banner .category { grid-area: 1 / 1 / 2 / 2;}
@@ -237,6 +237,7 @@
         justify-self: left;
         padding: 0.8rem 1rem;
         width:auto;
+        font-size: 14px;
     }
     .banner .evt-enddate br { content: "";}
     .banner .evt-enddate br:after { content: ": ";}
