--- a/wwwroot/css/myprofile.css
+++ b/wwwroot/css/myprofile.css
@@ -58,6 +58,7 @@ label {
   background-color: #fff;
   font-size: 15px;
   font-weight: 500;
+  margin-left: 10px;
   padding: 0.5rem 0.7rem;
   border: 2px solid var(--border-color);
   border-radius: 25px;
@@ -259,6 +260,9 @@ input[type="submit"]:hover {
 }
 
 @media (max-width: 992px) {
+  .profile {
+    width:auto;
+  }
   .profile-header img {
     width: 70px;
     height: 70px;
